<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingTop="50dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/card_greenborder"
        android:layout_marginBottom="50sp"
        android:paddingLeft="5sp"
        android:elevation="1dp"
        android:paddingTop="10sp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30sp"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.20"
                android:text="@string/fromLbl"
                android:textStyle="bold"
                android:textAppearance="?android:attr/textAppearanceLarge"/>

            <Spinner
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/frmSpinner"
                android:prompt="@string/dept_city"
                android:layout_weight="0.80" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"

            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.20"
                android:text="@string/toLbl"
                android:textStyle="bold"
                android:textAppearance="?android:attr/textAppearanceLarge"
                />

            <Spinner
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/toSpinner"
                android:entries="@array/country_arrays"
                android:prompt="@string/dest_city"
                android:layout_weight="0.80" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:onClick="getDate"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.20"
                android:text="@string/dateLbl"
                android:textStyle="bold"
                android:textAppearance="?android:attr/textAppearanceLarge"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.80"
                android:text="Choose Date"
                android:id="@+id/dateCont"
                android:textAppearance="?android:attr/textAppearanceLarge"
                />

        </LinearLayout>


        </LinearLayout>





    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/plan_search_button_padding"
        android:orientation="horizontal" >

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="showDetails"
        android:background="#f1c40f"
        android:text="Search"
        android:textColor="#FFFFFF"
        android:elevation="8dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="50dp"
        android:orientation="horizontal"
        android:layout_weight="1">


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="0dp"
        android:gravity="center_horizontal"
        >



        <ImageButton
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:textSize="20sp"
            android:src="@drawable/ic_menu_home"
            android:textColor = "@android:color/white"
            android:tint="@android:color/white"
            android:background="@drawable/oval"
            android:elevation="1dp"
            android:layout_marginBottom="10dp"
            android:id="@+id/hmeBtn"
            android:transitionName="planTrans"
            android:focusable="false"
            android:stateListAnimator="@anim/button_elevation"
            android:onClick="goToHome"
            android:paddingLeft="5sp"/>


    </LinearLayout>
    </LinearLayout>